--- a/code/index.css
+++ b/code/index.css
@@ -368,6 +368,8 @@ td {
 .homePageButtonsScroll {
     overflow-y: scroll;
     height: 62vh;
+    margin-top: -0.5em;
+    text-align: center;
 }
 
 .testButton {
@@ -633,4 +635,20 @@ td {
 
 .signForce {
     width: 50%;
+}
+
+.href-div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+a {
+    font-size: 1.2rem;
+    margin-bottom: 10px; /* Adjust the spacing as needed */
+    /* text-decoration: none; Optional: Remove underline from links */
+    color: #b70404; /* Optional: Set link color */
+}
+.href-div a:last-child {
+    margin-bottom: 0; /* Remove margin from the last link */
 }
